--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="./soli.png" />
+    <link rel="stylesheet" href="/style.css?v=1.0.1" />
+    
     <title>Document</title>
   </head>
   <body>
