--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css?v=1.0.1" />
+    <link rel="stylesheet" href="./style.css" />
     
     <title>Document</title>
   </head>
@@ -23,7 +23,7 @@
           <label>password</label>
         </div>
         <div class="policy-password">
-          <label><input type="checkbox" />Я принимаю  <a href="#">
+          <label><input type="checkbox" />Я принимаю все <a href="#">
             Политику <br />
             конфиденциальности
           </a></label>
